--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,14 @@
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
+        "predis/predis": "^2.3",
+        "socialiteproviders/apple": "^5.6",
+        "socialiteproviders/facebook": "^4.1",
+        "socialiteproviders/google": "^4.1",
         "spatie/laravel-permission": "^6.10",
+        "spatie/laravel-sluggable": "^3.7",
         "yajra/laravel-datatables": "^11.0"
     },
     "require-dev": {
