--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kreait/firebase-php": "^7.16",
+        "laravel-notification-channels/fcm": "^4.5",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
         "laravel/sanctum": "^4.0",
